# fitch

./: custom_bitstream.py  env.yml  exemple_arbre.txt  fitch.py  pyproject.toml  tree.xml  tree_example.txt
