[tool.poetry]
name = "fitch"
version = "0.1.0"
description = ""
authors = ["aarnoux <alizee.arnoux@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
bitstring = "^3.1.9"
bitstream = "^2.6.0"
numpy = "^1.23.3"
black = "^22.8.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
